{
    "version": 1,
    "name": "Inputs",
    "maps": [
        {
            "name": "RhythmGame",
            "id": "5f0f6e8e-e5ca-45d5-9f1b-86b0e409d1dd",
            "actions": [
                {
                    "name": "Lane1",
                    "type": "Button",
                    "id": "b96832e2-ba51-420b-8fce-3c7f969f1a8c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Lane2",
                    "type": "Button",
                    "id": "cf377145-2fb8-4fde-a2fd-e8475f4e99a6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Lane3",
                    "type": "Button",
                    "id": "a8b910ee-2770-4dba-bf5c-7ae8d350cbcf",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Lane4",
                    "type": "Button",
                    "id": "83b51df3-2504-40be-b02b-7d6ab9e6bacf",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Lane5",
                    "type": "Button",
                    "id": "9a0f45d6-1d8d-4a4c-b304-60953ed70e94",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ae51ecd6-8363-43a8-878f-2d3da6aac10e",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Lane1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eda933dd-668a-4a99-b741-10d16c25e4b3",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Lane2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "752b91fd-ff3d-4513-9319-fbc06b945600",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Lane3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "77c6a9cd-be94-4dc3-af25-572c3b8756d6",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Lane4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "08383808-d606-4f14-871a-a906c8799cb5",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Lane5",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}